kubernetes/my-cluster/postgres-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    app: mypostgres
    type: database
spec:
  containers:
    - name: my-postgres-container
      image: postgres
