kubernetes/my-cluster/ingress-service.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";

spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: myapp-backend-service
              servicePort: 4000
          - path: /?(.*)
            backend:
              serviceName: myapp-frontend-service
              servicePort: 80
